[package]
name = "blot"
version = "0.1.0"
authors = ["Arnau Siches <asiches@gmail.com>"]

[[bin]]
name = "play"
test = false
doc = false

[lib]
name = "blot"
path = "src/lib.rs"

[dependencies]
sha2 = "0.7"
sha3 = "0.7"
blake2 = "0.7"
digest = "0.7"
hex = "0.3"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
itertools = "0.7.8"

[features]
default = []
common_json = []
