[package]
name = "blot"
version = "0.1.2"
authors = ["Arnau Siches <asiches@gmail.com>"]

license = "MIT"
description = "Blot command line interface."
readme = "README.md"

homepage = "https://github.com/arnau/blot"
repository = "https://github.com/arnau/blot"
keywords = ["blot", "multihash", "objecthash", "cli"]


[[bin]]
name = "blot"
path = "src/main.rs"
bench = false

[workspace]
members = ["blot-lib"]

[dependencies]
blot-lib = { version = "0.1", path = "blot-lib" }
clap = "2.32.0"
serde_json = "1.0"
ansi_term = "0.11"
