[package]
name = "blot-lib"
version = "0.1.0"
authors = ["Arnau Siches <asiches@gmail.com>"]

[lib]
name = "blot"
path = "src/lib.rs"

[dependencies]
sha-1 = { version = "0.8", optional = true }
sha2 = { version = "0.8", optional = true }
sha3 = { version = "0.8", optional = true }
blake2 = { version = "0.8", optional = true }
hex = "0.3"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
itertools = "0.7.8"
regex = "1"
lazy_static = "1.1.0"

[features]
default = ["sha-1", "sha2", "sha3", "blake2"]
common_json = []
