[package]
name = "blot-lib"
version = "0.1.1"
authors = ["Arnau Siches <asiches@gmail.com>"]

license = "MIT"
description = "Blot library implements Objecthash mixed with Multihash"
readme = "README.md"

homepage = "https://github.com/arnau/blot"
repository = "https://github.com/arnau/blot"
keywords = ["blot", "multihash", "objecthash", "sha2", "blake2"]

[lib]
name = "blot"
path = "src/lib.rs"

[dependencies]
sha-1 = { version = "0.8", optional = true }
sha2 = { version = "0.8", optional = true }
sha3 = { version = "0.8", optional = true }
blake2 = { version = "0.8", optional = true }
hex = "0.3"
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", optional = true }
regex = { version = "1", optional = true }
lazy_static = { version = "1.1.0", optional = true }

[dev-dependencies]
itertools = "0.7.8"

[features]
default = ["digesters", "blot_json"]
blot_json = ["serde", "serde_json", "regex", "lazy_static"]
common_json = ["serde", "serde_json"]
digesters = ["sha-1", "sha2", "sha3", "blake2"]

[badges]
travis-ci = { repository = "arnau/blot" }
